Moving Notification to infrastructure. Adding Javax Bean Validation to validate commands